@@ -1684,3 +1684,13 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixed buffering modes of {TYPE} and {DIR} command to speed up functions.
 	
 	- Fixed issues of both libinteval and libmatheval in determining delimiters.
+	
+{{Thursday 20th, April}}
+
+	- Fixed errors in unicodes files search functions.
+	
+	- Fixed {FIND} command for enhanced compatibility with cmd.exe.
+	
+	- Fixed manual pages.
+	
+	- Fixed some typos.
