@@ -34,7 +34,8 @@ ${	SETLOCAL [ENABLEDELAYEDEXPANSION | DISABLEDELAYEDEXPANSION] [ENABLEFLOATS | D
 		- {ENABLEFLOATS}, {DISABLEFLOATS} : Active/désactive les nombres flotants pour la commande {set|SET}.
 
 		- {CMDLYCORRECT}, {CMDLYINCORRECT} : Active/désactive les options de compatibilité
-		avec {cmd.exe}.
+		avec {cmd.exe}. Modifier cette option entraîne le redémarrage du script en cours
+		d'exécution depuis le début.
 
 {{Compatibilite}}
 
